--- a/addons/FlowField/plugin.cfg
+++ b/addons/FlowField/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="FlowField"
-description=""
+description="An alpha version of a plugin I wish to develope. For all your flow field needs and group pathfinding desires, this will be a plugin for you. After full developement of this is done, I plan to convert it to c++ and use multi-threading for speed improvements. If it gets good enough, I'll see to making a merge request to the main godot engine. Though, that may be a little while off.\n\nEnjoy version 0.0.1."
 author="Xavier Alvarez"
-version="1.0.0"
+version="0.0.1"
 script="plugin.gd"
